--- a/pytorch/nn_workflow_practice.ipynb
+++ b/pytorch/nn_workflow_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzAoVkqKdXp4UAN+9ukDIJ",
+      "authorship_tag": "ABX9TyNF7D5XpX8ODi368XQy7Lqy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,10 +430,170 @@
         "# Building a Training and Testing Loop\n",
         "torch.manual_seed(42)\n",
         "\n",
-        "epochs = 1000\n"
+        "epochs = 1000\n",
+        "\n",
+        "# Put data to target device\n",
+        "X_train, y_train = X_train.to(device), y_train.to(device)\n",
+        "X_test, y_test = X_test.to(device), y_test.to(device)\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "  model1.train()\n",
+        "\n",
+        "  # 1. Forward pass (model outputs raw logits)\n",
+        "  y_logits = model1(X_train).squeeze()\n",
+        "  y_preds = torch.round(torch.sigmoid(y_logits))\n",
+        "\n",
+        "  # 2. Calculate loss/accuracy - https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html\n",
+        "  loss = loss_fn(torch.sigmoid(y_logits), y_train)\n",
+        "  accuracy = accuracy_fn(y_true=y_train, y_pred=y_preds)\n",
+        "\n",
+        "  # 3. Optimizer zero grad\n",
+        "  optimiser.zero_grad()\n",
+        "\n",
+        "  # 4. Loss backwards\n",
+        "  loss.backward()\n",
+        "\n",
+        "  # 5. Optimizer step\n",
+        "  optimiser.step()\n",
+        "\n",
+        "  ### Testing\n",
+        "  model1.eval()\n",
+        "  with torch.inference_mode():\n",
+        "    # 1. Forward pass\n",
+        "    test_logits = model1(X_test).squeeze()\n",
+        "    test_pred = torch.round(torch.sigmoid(test_logits))\n",
+        "\n",
+        "    # 2. Calculate loss/accuracy\n",
+        "    test_loss = loss_fn(torch.sigmoid(test_logits), y_test)\n",
+        "    test_accuracy = accuracy_fn(y_true=y_test, y_pred=test_pred)\n",
+        "\n",
+        "    # Print out what's happening every 10 epochs\n",
+        "    if epoch % 10 == 0:\n",
+        "      print(f\"Epoch: {epoch} | Loss: {loss:.5f}, Accuracy: {accuracy:.2f}% | Test loss: {test_loss:.5f}, Test acc: {test_accuracy:.2f}%\")\n",
+        "\n"
       ],
       "metadata": {
-        "id": "l4wMJd2lVVhV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l4wMJd2lVVhV",
+        "outputId": "08ae2dda-a6c2-4a1f-a245-c08593fed1f0"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0 | Loss: 0.69860, Accuracy: 49.38% | Test loss: 0.69912, Test acc: 51.50%\n",
+            "Epoch: 10 | Loss: 0.69639, Accuracy: 49.75% | Test loss: 0.69718, Test acc: 49.50%\n",
+            "Epoch: 20 | Loss: 0.69552, Accuracy: 49.00% | Test loss: 0.69627, Test acc: 51.50%\n",
+            "Epoch: 30 | Loss: 0.69501, Accuracy: 49.12% | Test loss: 0.69565, Test acc: 51.00%\n",
+            "Epoch: 40 | Loss: 0.69464, Accuracy: 49.75% | Test loss: 0.69519, Test acc: 51.00%\n",
+            "Epoch: 50 | Loss: 0.69436, Accuracy: 50.00% | Test loss: 0.69483, Test acc: 52.50%\n",
+            "Epoch: 60 | Loss: 0.69414, Accuracy: 50.25% | Test loss: 0.69455, Test acc: 52.50%\n",
+            "Epoch: 70 | Loss: 0.69397, Accuracy: 50.00% | Test loss: 0.69433, Test acc: 52.50%\n",
+            "Epoch: 80 | Loss: 0.69382, Accuracy: 50.12% | Test loss: 0.69416, Test acc: 52.50%\n",
+            "Epoch: 90 | Loss: 0.69370, Accuracy: 50.00% | Test loss: 0.69402, Test acc: 52.50%\n",
+            "Epoch: 100 | Loss: 0.69360, Accuracy: 50.00% | Test loss: 0.69392, Test acc: 52.50%\n",
+            "Epoch: 110 | Loss: 0.69352, Accuracy: 49.88% | Test loss: 0.69384, Test acc: 52.50%\n",
+            "Epoch: 120 | Loss: 0.69345, Accuracy: 50.12% | Test loss: 0.69378, Test acc: 52.00%\n",
+            "Epoch: 130 | Loss: 0.69339, Accuracy: 50.25% | Test loss: 0.69373, Test acc: 51.00%\n",
+            "Epoch: 140 | Loss: 0.69333, Accuracy: 50.50% | Test loss: 0.69370, Test acc: 51.00%\n",
+            "Epoch: 150 | Loss: 0.69329, Accuracy: 50.62% | Test loss: 0.69367, Test acc: 50.50%\n",
+            "Epoch: 160 | Loss: 0.69325, Accuracy: 50.62% | Test loss: 0.69366, Test acc: 50.00%\n",
+            "Epoch: 170 | Loss: 0.69321, Accuracy: 50.38% | Test loss: 0.69365, Test acc: 50.00%\n",
+            "Epoch: 180 | Loss: 0.69318, Accuracy: 50.00% | Test loss: 0.69365, Test acc: 49.50%\n",
+            "Epoch: 190 | Loss: 0.69315, Accuracy: 50.00% | Test loss: 0.69365, Test acc: 49.00%\n",
+            "Epoch: 200 | Loss: 0.69312, Accuracy: 50.25% | Test loss: 0.69366, Test acc: 48.00%\n",
+            "Epoch: 210 | Loss: 0.69310, Accuracy: 50.00% | Test loss: 0.69367, Test acc: 48.00%\n",
+            "Epoch: 220 | Loss: 0.69308, Accuracy: 50.12% | Test loss: 0.69368, Test acc: 47.50%\n",
+            "Epoch: 230 | Loss: 0.69306, Accuracy: 49.50% | Test loss: 0.69369, Test acc: 48.00%\n",
+            "Epoch: 240 | Loss: 0.69305, Accuracy: 49.75% | Test loss: 0.69370, Test acc: 48.00%\n",
+            "Epoch: 250 | Loss: 0.69303, Accuracy: 49.38% | Test loss: 0.69372, Test acc: 47.50%\n",
+            "Epoch: 260 | Loss: 0.69302, Accuracy: 49.88% | Test loss: 0.69373, Test acc: 47.00%\n",
+            "Epoch: 270 | Loss: 0.69301, Accuracy: 49.50% | Test loss: 0.69375, Test acc: 46.00%\n",
+            "Epoch: 280 | Loss: 0.69300, Accuracy: 49.88% | Test loss: 0.69377, Test acc: 46.50%\n",
+            "Epoch: 290 | Loss: 0.69299, Accuracy: 49.75% | Test loss: 0.69379, Test acc: 48.00%\n",
+            "Epoch: 300 | Loss: 0.69298, Accuracy: 50.12% | Test loss: 0.69380, Test acc: 47.50%\n",
+            "Epoch: 310 | Loss: 0.69297, Accuracy: 50.12% | Test loss: 0.69382, Test acc: 47.50%\n",
+            "Epoch: 320 | Loss: 0.69297, Accuracy: 50.00% | Test loss: 0.69384, Test acc: 48.00%\n",
+            "Epoch: 330 | Loss: 0.69296, Accuracy: 50.25% | Test loss: 0.69385, Test acc: 48.00%\n",
+            "Epoch: 340 | Loss: 0.69295, Accuracy: 50.38% | Test loss: 0.69387, Test acc: 47.50%\n",
+            "Epoch: 350 | Loss: 0.69295, Accuracy: 50.38% | Test loss: 0.69389, Test acc: 47.50%\n",
+            "Epoch: 360 | Loss: 0.69294, Accuracy: 50.62% | Test loss: 0.69390, Test acc: 47.00%\n",
+            "Epoch: 370 | Loss: 0.69294, Accuracy: 50.38% | Test loss: 0.69392, Test acc: 47.50%\n",
+            "Epoch: 380 | Loss: 0.69294, Accuracy: 50.75% | Test loss: 0.69393, Test acc: 48.00%\n",
+            "Epoch: 390 | Loss: 0.69293, Accuracy: 50.62% | Test loss: 0.69395, Test acc: 48.00%\n",
+            "Epoch: 400 | Loss: 0.69293, Accuracy: 50.88% | Test loss: 0.69396, Test acc: 48.00%\n",
+            "Epoch: 410 | Loss: 0.69293, Accuracy: 51.38% | Test loss: 0.69397, Test acc: 48.00%\n",
+            "Epoch: 420 | Loss: 0.69292, Accuracy: 51.62% | Test loss: 0.69399, Test acc: 48.00%\n",
+            "Epoch: 430 | Loss: 0.69292, Accuracy: 52.12% | Test loss: 0.69400, Test acc: 48.00%\n",
+            "Epoch: 440 | Loss: 0.69292, Accuracy: 51.88% | Test loss: 0.69401, Test acc: 48.00%\n",
+            "Epoch: 450 | Loss: 0.69292, Accuracy: 51.88% | Test loss: 0.69402, Test acc: 48.50%\n",
+            "Epoch: 460 | Loss: 0.69292, Accuracy: 51.88% | Test loss: 0.69403, Test acc: 48.50%\n",
+            "Epoch: 470 | Loss: 0.69292, Accuracy: 52.00% | Test loss: 0.69404, Test acc: 48.50%\n",
+            "Epoch: 480 | Loss: 0.69291, Accuracy: 51.88% | Test loss: 0.69406, Test acc: 49.00%\n",
+            "Epoch: 490 | Loss: 0.69291, Accuracy: 51.75% | Test loss: 0.69407, Test acc: 49.00%\n",
+            "Epoch: 500 | Loss: 0.69291, Accuracy: 52.00% | Test loss: 0.69407, Test acc: 49.50%\n",
+            "Epoch: 510 | Loss: 0.69291, Accuracy: 52.00% | Test loss: 0.69408, Test acc: 49.50%\n",
+            "Epoch: 520 | Loss: 0.69291, Accuracy: 52.00% | Test loss: 0.69409, Test acc: 49.50%\n",
+            "Epoch: 530 | Loss: 0.69291, Accuracy: 51.75% | Test loss: 0.69410, Test acc: 50.00%\n",
+            "Epoch: 540 | Loss: 0.69291, Accuracy: 51.88% | Test loss: 0.69411, Test acc: 50.00%\n",
+            "Epoch: 550 | Loss: 0.69291, Accuracy: 51.88% | Test loss: 0.69412, Test acc: 50.00%\n",
+            "Epoch: 560 | Loss: 0.69291, Accuracy: 52.12% | Test loss: 0.69412, Test acc: 50.00%\n",
+            "Epoch: 570 | Loss: 0.69291, Accuracy: 52.25% | Test loss: 0.69413, Test acc: 50.00%\n",
+            "Epoch: 580 | Loss: 0.69291, Accuracy: 52.25% | Test loss: 0.69414, Test acc: 50.00%\n",
+            "Epoch: 590 | Loss: 0.69291, Accuracy: 52.12% | Test loss: 0.69414, Test acc: 50.00%\n",
+            "Epoch: 600 | Loss: 0.69291, Accuracy: 52.25% | Test loss: 0.69415, Test acc: 50.00%\n",
+            "Epoch: 610 | Loss: 0.69291, Accuracy: 52.00% | Test loss: 0.69415, Test acc: 50.00%\n",
+            "Epoch: 620 | Loss: 0.69291, Accuracy: 52.12% | Test loss: 0.69416, Test acc: 49.50%\n",
+            "Epoch: 630 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69416, Test acc: 49.00%\n",
+            "Epoch: 640 | Loss: 0.69290, Accuracy: 52.12% | Test loss: 0.69417, Test acc: 49.00%\n",
+            "Epoch: 650 | Loss: 0.69290, Accuracy: 52.12% | Test loss: 0.69417, Test acc: 49.00%\n",
+            "Epoch: 660 | Loss: 0.69290, Accuracy: 52.12% | Test loss: 0.69418, Test acc: 49.00%\n",
+            "Epoch: 670 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69418, Test acc: 48.50%\n",
+            "Epoch: 680 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69419, Test acc: 48.50%\n",
+            "Epoch: 690 | Loss: 0.69290, Accuracy: 52.25% | Test loss: 0.69419, Test acc: 48.50%\n",
+            "Epoch: 700 | Loss: 0.69290, Accuracy: 52.25% | Test loss: 0.69419, Test acc: 48.50%\n",
+            "Epoch: 710 | Loss: 0.69290, Accuracy: 52.25% | Test loss: 0.69420, Test acc: 48.00%\n",
+            "Epoch: 720 | Loss: 0.69290, Accuracy: 52.12% | Test loss: 0.69420, Test acc: 48.00%\n",
+            "Epoch: 730 | Loss: 0.69290, Accuracy: 52.12% | Test loss: 0.69420, Test acc: 48.50%\n",
+            "Epoch: 740 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69421, Test acc: 48.00%\n",
+            "Epoch: 750 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69421, Test acc: 48.00%\n",
+            "Epoch: 760 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69421, Test acc: 48.00%\n",
+            "Epoch: 770 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69421, Test acc: 48.00%\n",
+            "Epoch: 780 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69422, Test acc: 48.00%\n",
+            "Epoch: 790 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69422, Test acc: 48.00%\n",
+            "Epoch: 800 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69422, Test acc: 48.00%\n",
+            "Epoch: 810 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69422, Test acc: 48.00%\n",
+            "Epoch: 820 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69423, Test acc: 48.00%\n",
+            "Epoch: 830 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69423, Test acc: 48.00%\n",
+            "Epoch: 840 | Loss: 0.69290, Accuracy: 52.12% | Test loss: 0.69423, Test acc: 48.50%\n",
+            "Epoch: 850 | Loss: 0.69290, Accuracy: 52.00% | Test loss: 0.69423, Test acc: 48.50%\n",
+            "Epoch: 860 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69423, Test acc: 48.50%\n",
+            "Epoch: 870 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69423, Test acc: 48.50%\n",
+            "Epoch: 880 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 890 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 900 | Loss: 0.69290, Accuracy: 51.88% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 910 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 920 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 930 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 940 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 950 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 960 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69424, Test acc: 48.50%\n",
+            "Epoch: 970 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69425, Test acc: 48.50%\n",
+            "Epoch: 980 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69425, Test acc: 48.50%\n",
+            "Epoch: 990 | Loss: 0.69290, Accuracy: 51.75% | Test loss: 0.69425, Test acc: 48.00%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JY72yQWUZT-s"
       },
       "execution_count": null,
       "outputs": []
